# birfen-staj

./: README.md
1.gün/: pythonçalışma.py  pythonçalışma3.py
10.gün/: 10.gün özet.txt
10.gün/my_cpp_pkg(4)/: CMakeLists.txt
10.gün/my_cpp_pkg(5)/: CMakeLists.txt
10.gün/my_cpp_pkg(6)/: CMakeLists.txt
10.gün/my_py_pkg(6)/: setup.py
11.gün/my_cpp_pkg(9)/: CMakeLists.txt
11.gün/my_robot_interfaces/: CMakeLists.txt
2.gün/: 2.gün özet.docx  denemerviz.rviz  çalışma.cpp  çalışma2.cpp
3.gün/: 3.gün özet.txt  pythonçalışma7.py  çalışma3.cpp  çalışma4.cpp
4.gün/: 4.gün özet ve görseller.docx  4.gün özet.docx  çalışma6.cpp  çalışma8.cpp
5.gün/: 5.gün özet.docx  deneme4.rviz  tb3_house_map.yaml
6.gün/: 6.gün özet.txt  saat.py
7.gün/: 7.gün özet.txt  my_first_node(1).py
8.gün/: 8.gün özet.txt  çalışma9.cpp
C++ bireysel çalışma/: çalışma10.cpp  çalışma4.cpp  çalışma5.cpp  çalışma7.cpp
Excelödev/: Readme(1.örnek).txt  Readme(2.örnek).txt  Readme(3 tane örnek).txt  Readme(3.örnek).txt  Readme(4.örnek).txt  Readme1.örnek  house_map.pgm  house_map.yaml
Excelödev/my_cpp_pkg/: CMakeLists.txt
Excelödev/my_cpp_pkg/src/: engel.cpp  pathfollowernode.cpp  shapedrawernode.cpp  threepoints.cpp  turtlebot1metre.cpp  turtlebotcontrolnode.cpp  turtlecontrolnode.cpp
Gün özetleri/: 1.gün açıklama.txt  11.gün özet.txt  12.gün özet.txt  13.gün özet.txt  14.gün özet.txt  15.gün özet.txt  9.gün özet.txt
Python bireysel çalışma/: pythonçalışma2.py  pythonçalışma4.py  pythonçalışma5.py  pythonçalışma6.py
Ros1(1.udemydersi)/: deneme2.rviz  deneme3.rviz  tb3_house_map.pgm
(+71 files in other folders)
